se añadio la HU 18, resolviendo deuda tecnica